fix calendar and news alignment

--- a/src/app/calendar/calendar.component.scss
+++ b/src/app/calendar/calendar.component.scss
@@ -1,7 +1,5 @@
 .widget-body {
   margin: 0 auto;
-}
-.event {
   width: 300px;
 }
 
