--- a/src/app/news/news.component.scss
+++ b/src/app/news/news.component.scss
@@ -1,9 +1,5 @@
 .widget-body {
-  font-family: 'Roboto', sans-serif;
-  width: auto;
-}
-
-.news {
+  margin: 0 auto;
   width: 300px;
 }
 
